# multi-agent-evolve

./: .gitignore  README.md  pyproject.toml
plans/: self_improving_multi_agent_plan.md
src/: config.py  logging_schema.py  main.py  orchestrator.py  reward.py  state_extractor.py
src/agents/: __init__.py  base.py  critic.py  data_analyst.py  planner.py  visualizer.py  writer.py
src/ai_providers/: ai_provider.py  nvidia_provider.py  ollama_provider.py
src/memory/: __init__.py  error_catalog.py  skill_library.py
src/router/: __init__.py  actions.py  bandit_router.py  base.py  planner_router.py  random_router.py  static_router.py
src/tools/: __init__.py  base.py  chart_generator.py  file_io.py  python_sandbox.py  schema_inspector.py  sql_query.py  statistical_test.py
tests/: conftest.py  test_bandit_router.py  test_memory.py  test_reward.py  test_router.py  test_skip_handling.py  test_state_extractor.py  test_tool_wrapper.py
