[project]
name = "multi-agent-evolve"
version = "0.1.0"
description = "Research in evolving multi-agentic systems with reinforcement learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1.3",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "openpyxl>=3.1.0",
]
